Fix GDPR links not appearing

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -470,6 +470,33 @@ div.widget .extendednavigation > ul, div.widget.extendednavigation > ul {
     color: @font-swatch6-color;
 }
 
+.gdpr-footer {
+	background: @color-swatch7;
+	bottom: 0;
+	position: fixed;
+	right: -320px;
+	opacity: 0;
+	width: 320px;
+	visibility: hidden;
+	transition: all 0.5s ease;
+	z-index: 99999;
+
+	@media @mobile {
+		width: 250px;
+	}
+}
+
+.menu-active .gdpr-footer {
+	opacity: 1;
+	right: 0;
+	visibility: visible;
+}
+
+.gdpr-footer__link {
+	word-break: break-word;
+}
+
+
 /* ===============================
    FEATURE
    =============================== */
